// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<NavigationItem /> Should render correctly 1`] = `
<div>
  <button
    class="card feature-card"
    role="link"
    style="cursor: pointer;"
    type="button"
  >
    <div
      class="card__background"
    />
    <div
      class="card__outer-container card__outer-container--padded"
    >
      <div
        aria-hidden="true"
        class="feature-card__outer-container feature-card__outer-container--auto"
      >
        <div
          class="feature-card__date"
        />
        <div
          class="feature-card__center-container"
        >
          <div
            class="section__outer feature-card__title"
          />
        </div>
      </div>
    </div>
    <div
      class="card__banner"
    />
  </button>
</div>
`;

exports[`<NavigationItem /> Should render correctly hrefExternal 1`] = `
<div>
  <a
    class="card feature-card"
    href="https://duckduckgo.com/"
  >
    <div
      class="card__background"
    />
    <div
      class="card__outer-container card__outer-container--padded"
    >
      <div
        aria-hidden="true"
        class="feature-card__outer-container feature-card__outer-container--auto"
      >
        <div
          class="feature-card__date"
        />
        <div
          class="feature-card__center-container"
        >
          <div
            class="section__outer feature-card__title"
          />
        </div>
      </div>
    </div>
    <div
      class="card__banner"
    />
  </a>
</div>
`;

exports[`<NavigationItem /> Should render correctly with custom className 1`] = `
<div>
  <button
    class="card feature-card test-custom-classname"
    role="link"
    style="cursor: pointer;"
    type="button"
  >
    <div
      class="card__background"
    />
    <div
      class="card__outer-container card__outer-container--padded"
    >
      <div
        aria-hidden="true"
        class="feature-card__outer-container feature-card__outer-container--auto"
      >
        <div
          class="feature-card__date"
        />
        <div
          class="feature-card__center-container"
        >
          <div
            class="section__outer feature-card__title"
          />
        </div>
      </div>
    </div>
    <div
      class="card__banner"
    />
  </button>
</div>
`;

exports[`<NavigationItem /> Should render with nextified href 1`] = `
<div>
  <button
    class="card feature-card"
    role="link"
    style="cursor: pointer;"
    type="button"
  >
    <div
      class="card__background"
    />
    <div
      class="card__outer-container card__outer-container--padded"
    >
      <div
        aria-hidden="true"
        class="feature-card__outer-container feature-card__outer-container--auto"
      >
        <div
          class="feature-card__date"
        />
        <div
          class="feature-card__center-container"
        >
          <div
            class="section__outer feature-card__title"
          />
        </div>
      </div>
    </div>
    <div
      class="card__banner"
    />
  </button>
</div>
`;
